# esmf-trace

./: .readthedocs.yaml  README.md  pyproject.toml  requirements-access.txt  requirements.txt  setup.py  setup.sh  setup_gadi.sh
.github/workflows/: CD.yml  cd.yml  check_links.yml  ci.yml
conda/: meta.yaml
documentation/: mkdocs.yml  requirements.txt
documentation/docs/pages/: index.md  vscode_jupyter_kernel.md
src/access/esmf-trace/: bt2_utils.py  extract_timing.py  main.py  plotting.py  staging.py  utils.py
src/access/esmf_trace/: __init__.py  batch_runs.py  bt2_utils.py  common_vars.py  config.py  ctf_parser.py  extract_timing.py  library.py  main.py  parsers.py  plotting.py  postprocess.py  products.py  run.py  stats.py  timeseries.py  tmp_yaml_parser.py  utils.py
